# products_microservice

./: .gitignore  docker-compose.yml
docker/dev/env/: .env
docker/dev/redis/: redis.yml
docker/prod/env/: .data.env
web/: pyproject.toml
web/actions/: choices.py  models.py
web/actions/migrations/: 0001_initial.py  0002_auto_20220813_1217.py  0003_auto_20220930_1325.py
web/api/v1/: urls.py
web/api/v1/actions/: pagination.py  serializers.py  services.py  urls.py  views.py
web/api/v1/product/: filters.py  serializers.py  services.py  signals.py  urls.py  views.py
web/api/v1/product/tests/: test_categories.py
web/channel/: admin.py  models.py
web/channel/migrations/: 0001_initial.py  0002_alter_channel_slug.py  0003_alter_channel_name.py  0004_alter_channel_slug.py  0005_alter_channel_slug.py  0006_alter_channel_unique_together.py  0007_alter_channel_name.py  0008_alter_channel_slug.py
web/fixtures/: db_dump.json
web/main/: middleware.py  models.py  services.py
web/product/: admin.py  apps.py  choices.py  models.py  pagination.py
web/product/migrations/: 0001_initial.py  0002_productvariantchannellisting.py  0003_auto_20220520_1634.py  0004_auto_20220520_1644.py  0005_productvariantchannellisting_is_bestseller.py  0006_auto_20220522_2227.py  0007_producttype_category.py  0008_auto_20220523_1056.py  0009_auto_20220526_2013.py  0010_alter_product_default_variant.py  0011_auto_20220530_1731.py  0012_auto_20220705_1209.py  0013_productvariant_product_sku.py  0014_alter_productvariant_product_sku.py
web/src/: settings.py  urls.py
web/src/additional_settings/: celery_settings.py
web/src/requirements/: base.txt  local.txt
